--- a/add-tag-from-package.yml
+++ b/add-tag-from-package.yml
@@ -58,7 +58,7 @@ jobs:
 
   create-tag:
     needs: extract-tag
-    uses: ./.github/workflows/create-push-tags.yml
+    uses: ./create-push-tags.yml
     with:
       tag: ${{ needs.extract-tag.outputs.tag }}
       is-latest: ${{ inputs.is-latest }}
