--- a/add-tag.yml
+++ b/add-tag.yml
@@ -32,7 +32,7 @@ jobs:
 
   create-tag:
     needs: process-tag
-    uses: ./.github/workflows/create-push-tags.yml
+    uses: ./create-push-tags.yml
     with:
       tag: ${{ needs.process-tag.outputs.tag }}
       is-latest: ${{ inputs.is-latest }}
