--- a/.github/workflows/self-deploy.yml
+++ b/.github/workflows/self-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Add tag
-        uses: ./add-tag.yml
+        uses: JanCodeLab/workflows/add-tag.yml@main
         with:
           tag: ${{ github.event.inputs.tag }}
           is-latest: ${{ github.event.inputs.is-latest }}
