Update tag workflows to correctly evaluate 'is-latest' input as boolean

--- a/.github/workflows/add-tag-from-package.yml
+++ b/.github/workflows/add-tag-from-package.yml
@@ -61,4 +61,4 @@ jobs:
     uses: ./.github/workflows/create-push-tags.yml
     with:
       tag: ${{ needs.extract-tag.outputs.tag }}
-      is-latest: ${{ inputs.is-latest }}
+      is-latest: ${{ inputs.is-latest == 'true' }}
