--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -35,4 +35,4 @@ jobs:
     uses: ./.github/workflows/create-push-tags.yml
     with:
       tag: ${{ needs.process-tag.outputs.tag }}
-      is-latest: ${{ inputs.is-latest }}
+      is-latest: ${{ inputs.is-latest == 'true' }}
