--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -12,27 +12,11 @@ on:
         required: false
         default: true
         type: boolean
-    outputs:
-      tag:
-        description: "The tag that was created"
-        value: ${{ jobs.process-tag.outputs.tag }}
 
 jobs:
-  process-tag:
-    runs-on: ubuntu-latest
-    outputs:
-      tag: ${{ steps.format-tag.outputs.tag }}
-    steps:
-      - name: Format tag
-        id: format-tag
-        run: |
-          TAG="${{ inputs.tag }}"
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-          echo "✅ Using provided tag: $TAG"
-
   create-tag:
-    needs: process-tag
+    name: Create and push Tag
     uses: ./.github/workflows/create-push-tags.yml
     with:
-      tag: ${{ needs.process-tag.outputs.tag }}
+      tag: ${{ inputs.tag }}
       is-latest: ${{ inputs.is-latest == 'true' }}
