Add name to release workflow for clarity

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   add-tag:
+    name: Release workflow
     uses: ./.github/workflows/add-tag.yml
     with:
       tag: ${{ github.event.inputs.tag }}
