--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,15 @@ on:
         type: boolean
 
 jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Input test
+        run: echo "${{ github.event.inputs.is-latest }}"
   add-tag:
     name: Release workflow
     uses: ./.github/workflows/add-tag.yml
     with:
       tag: ${{ github.event.inputs.tag }}
-      is-latest: ${{ github.event.inputs.is-latest == 'true'}}
+      is-latest: ${{ github.event.inputs.is-latest }} == 'true'
