Refactor tag workflows to handle 'is-latest' input as a string and simplify evaluation logic

--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -14,17 +14,9 @@ on:
         type: boolean
 
 jobs:
-
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Input test
-        run: echo "${{ github.event.inputs.is-latest }}"
-        
   create-tag:
     name: Create and push Tag
     uses: ./.github/workflows/create-push-tags.yml
     with:
       tag: ${{ inputs.tag }}
-      is-latest: ${{ inputs.is-latest == 'true' }}
+      is-latest: ${{ inputs.is-latest }}
