--- a/.github/workflows/add-tag-from-package.yml
+++ b/.github/workflows/add-tag-from-package.yml
@@ -58,4 +58,4 @@ jobs:
     uses: ./.github/workflows/create-push-tags.yml
     with:
       tag: ${{ needs.extract-tag.outputs.tag }}
-      is-latest: ${{ inputs.is-latest == 'true' }}
+      is-latest: ${{ inputs.is-latest }}
