--- a/.github/workflows/create-push-tags.yml
+++ b/.github/workflows/create-push-tags.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   create-tag:
+    name: Create and push tag
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
