--- a/.github/workflows/add-tag-from-package.yml
+++ b/.github/workflows/add-tag-from-package.yml
@@ -53,9 +53,18 @@ jobs:
           echo "tag=$TAG" >> $GITHUB_OUTPUT
           echo "✅ Retrieved tag: $TAG"
 
-  create-tag:
+  
+  check-tag-exists:
     needs: extract-tag
-    uses: ./.github/workflows/create-push-tags.yml
+    name: Check if tag exists
+    uses: ./.github/workflows/check-tag-exists.yml
     with:
       tag: ${{ needs.extract-tag.outputs.tag }}
+
+  create-tag:
+    needs: check-tag-exists
+    if: ${{ !needs.check-tag-exists.outputs.exists == 'false'}}
+    uses: ./.github/workflows/create-push-tags.yml
+    with:
+      tag: ${{ needs.check-tag-exists.outputs.tag }}
       is-latest: ${{ inputs.is-latest }}
