--- a/.github/workflows/check-tag-exists.yml
+++ b/.github/workflows/check-tag-exists.yml
@@ -22,13 +22,16 @@ jobs:
     outputs:
       tag_exists: ${{ steps.check-tag.outputs.exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
       - name: Check if tag exists on remote
         id: check-tag
         run: |
           if git ls-remote --tags origin refs/tags/${{ inputs.tag }} | grep -q "refs/tags/${{ inputs.tag }}"; then
-            echo "exists=true" >> $GITHUB_OUTPUT
+            echo "exists='true'" >> $GITHUB_OUTPUT
             echo "Tag '${{ inputs.tag }}' exists on remote."
           else
-            echo "exists=false" >> $GITHUB_OUTPUT
+            echo "exists='false'" >> $GITHUB_OUTPUT
             echo "Tag '${{ inputs.tag }}' does not exist on remote."
           fi
