--- a/.github/workflows/add-tag-from-package.yml
+++ b/.github/workflows/add-tag-from-package.yml
@@ -63,7 +63,7 @@ jobs:
 
   create-tag:
     needs: check-tag-exists
-    if: ${{ !needs.check-tag-exists.outputs.exists == 'false'}}
+    if: ${{ !needs.check-tag-exists.outputs.exists == 'true'}}
     uses: ./.github/workflows/create-push-tags.yml
     with:
       tag: ${{ needs.check-tag-exists.outputs.tag }}
