Fix tag creation condition in workflows to check for non-existence of tags

--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -22,7 +22,7 @@ jobs:
 
   create-tag:
     needs: check-tag-exists
-    if: ${{ !needs.check-tag-exists.outputs.exists == 'true'}}
+    if: ${{ needs.check-tag-exists.outputs.exists == 'false'}}
     name: Create and push Tag
     uses: ./.github/workflows/create-push-tags.yml
     with:
