--- a/.github/workflows/add-tag-from-package.yml
+++ b/.github/workflows/add-tag-from-package.yml
@@ -57,14 +57,14 @@ jobs:
   check-tag-exists:
     needs: extract-tag
     name: Check if tag exists
-    uses: ./.github/workflows/check-tag-exists.yml
+    uses: JanCodeLab/workflows/.github/workflows/check-tag-exists.yml@latest
     with:
       tag: ${{ needs.extract-tag.outputs.tag }}
 
   create-tag:
     needs: check-tag-exists
     if: ${{ needs.check-tag-exists.outputs.exists == 'false'}}
-    uses: ./.github/workflows/create-push-tags.yml
+    uses: JanCodeLab/workflows/.github/workflows/create-push-tags.yml@latest
     with:
       tag: ${{ needs.check-tag-exists.outputs.tag }}
       is-latest: ${{ inputs.is-latest }}
