--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   check-tag-exists:
     name: Check if tag exists
-    uses: ./.github/workflows/check-tag-exists.yml
+    uses: JanCodeLab/workflows/.github/workflows/check-tag-exists.yml@latest
     with:
       tag: ${{ inputs.tag }}
 
@@ -24,7 +24,7 @@ jobs:
     needs: check-tag-exists
     if: ${{ needs.check-tag-exists.outputs.exists == 'false'}}
     name: Create and push Tag
-    uses: ./.github/workflows/create-push-tags.yml
+    uses: JanCodeLab/workflows/.github/workflows/create-push-tags.yml@latest
     with:
       tag: ${{ needs.check-tag-exists.outputs.tag }}
       is-latest: ${{ inputs.is-latest }}
