Add remote-name input to tag workflows and update README

--- a/.github/workflows/add-tag-from-package.yml
+++ b/.github/workflows/add-tag-from-package.yml
@@ -7,12 +7,24 @@ on:
         description: 'Path file containing the version'
         required: true
         type: string
+      remote-name:
+        description: 'Name of repository remote'
+        required: false
+        default: 'origin'
+        type: string
       is-latest:
         description: 'Handle add or update latest tag'
         required: false
         default: true
         type: boolean
+    outputs:
+      tag-exists:
+        description: 'Whether the tag exists on remote'
+        value: ${{ jobs.check-tag-exists.outputs.exists }}
 
+permissions:
+  contents: write
+  
 jobs:
   extract-tag:
     name: Extract Tag from package.json
@@ -60,6 +72,7 @@ jobs:
     uses: JanCodeLab/workflows/.github/workflows/check-tag-exists.yml@latest
     with:
       tag: ${{ needs.extract-tag.outputs.tag }}
+      remote-name: ${{ inputs.remote-name }}
 
   create-tag:
     needs: check-tag-exists
@@ -67,4 +80,5 @@ jobs:
     uses: JanCodeLab/workflows/.github/workflows/create-push-tags.yml@latest
     with:
       tag: ${{ needs.check-tag-exists.outputs.tag }}
+      remote-name: ${{ inputs.remote-name }}
       is-latest: ${{ inputs.is-latest }}
