--- a/.github/workflows/check-tag-exists.yml
+++ b/.github/workflows/check-tag-exists.yml
@@ -7,6 +7,11 @@ on:
         description: 'Tag to check'
         required: true
         type: string
+      remote-name:
+        description: 'Name of repository remote'
+        required: false
+        default: 'origin'
+        type: string
     outputs:
       exists:
         description: 'Whether the tag exists on remote'
@@ -28,7 +33,7 @@ jobs:
       - name: Check if tag exists on remote
         id: check-tag
         run: |
-          if git ls-remote --tags origin refs/tags/${{ inputs.tag }} | grep -q "refs/tags/${{ inputs.tag }}"; then
+          if git ls-remote --tags ${{ inputs.remote-name }} refs/tags/${{ inputs.tag }} | grep -q "refs/tags/${{ inputs.tag }}"; then
             echo "exists=true" >> $GITHUB_OUTPUT
             echo "Tag '${{ inputs.tag }}' exists on remote."
           else
