--- a/.github/workflows/create-push-tags.yml
+++ b/.github/workflows/create-push-tags.yml
@@ -1,11 +1,18 @@
-name: Create and Push Tag
-
+name: Create and Push Tag to origin
+permissions:
+  contents: write
+  
 on:
   workflow_call:
     inputs:
       tag:
         description: 'Tag to create and push'
         required: true
+        type: string
+      remote-name:
+        description: 'Name of repository remote'
+        required: false
+        default: 'origin'
         type: string
       is-latest:
         description: 'Handle add or update latest tag'
@@ -36,7 +43,7 @@ jobs:
           git tag -a "$TAG" -m "Release $TAG"
           
           # Push tag to remote
-          git push origin "$TAG"
+          git push ${{ inputs.remote-name }} "$TAG"
           
           echo "✅ Successfully created and pushed tag: $TAG"
           
@@ -49,12 +56,12 @@ jobs:
           git tag -d latest 2>/dev/null || true
           
           # Delete the remote latest tag if it exists (don't error if it doesn't)
-          git push origin :refs/tags/latest 2>/dev/null || true
+          git push ${{ inputs.remote-name }} :refs/tags/latest 2>/dev/null || true
           
           # Create a new latest tag pointing to the current HEAD
           git tag -a latest -m "Latest version ${{ inputs.tag }}"
           
           # Push the latest tag
-          git push origin latest
+          git push ${{ inputs.remote-name }} latest
           
           echo "✅ Successfully updated latest tag"
