--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,19 @@ on:
         type: boolean
 
 jobs:
-  add-tag:
-    name: Release workflow
-    uses: ./.github/workflows/add-tag.yml
+  check-tag-exists:
+    name: Check if tag exists
+    uses: .github/workflows/check-tag-exists.yml
     with:
-      tag: ${{ github.event.inputs.tag }}
-      is-latest: ${{ github.event.inputs.is-latest  == 'true'}}
+      tag: ${{ inputs.tag }}
+      remote-name: ${{ inputs.remote-name }}
+
+  create-tag:
+    needs: check-tag-exists
+    if: ${{ needs.check-tag-exists.outputs.exists == 'false'}}
+    name: Create and push Tag
+    uses: .github/workflows/create-push-tags.yml
+    with:
+      tag: ${{ needs.check-tag-exists.outputs.tag }}
+      remote-name: ${{ inputs.remote-name }}
+      is-latest: ${{ inputs.is-latest }}
